Constraints section written up

--- a/TODO
+++ b/TODO
@@ -1,1 +1,1 @@
-Use ablog in Makefile to automaticly deploy to parmes.gihub.io;
+Expand finite-element kinematics and dynamics sections into sub-sections, describing TL, BC, RO formulations.
