--- a/solfec/theory/conform.lyx
+++ b/solfec/theory/conform.lyx
@@ -72,7 +72,182 @@
 
 \begin_layout Standard
 \noindent
-Solfec implements the Signotini-Coulomb relationship
+Contact formulations are used in Solfec to facilitate solution of the constraint
+s equation
+\end_layout
+
+\begin_layout Standard
+\begin_inset Formula 
+\[
+\mathbf{C}\left(\mathbf{U},\mathbf{R}\right)=\mathbf{0}
+\]
+
+\end_inset
+
+once contact points are detected between bodies and included into the :ref:`cons
+traints <solfec-theory-constraints>`.
+ Depending on a solver type a contact formulation can be either used locally
+ (on a single contact point level) or globally (on the level of a all contact
+ points simultaneously).
+ This however does not affect the mathematics of a contact formulation itself.
+ Sections below describe the formulations employed by Solfec and point to
+ references, source code sections and solver settings related to these formulati
+ons.
+\end_layout
+
+\begin_layout Section
+Projected gradient formulation
+\end_layout
+
+\begin_layout Standard
+This is an implicit formulation based on 
+\begin_inset CommandInset citation
+LatexCommand cite
+key "AlartCurnier"
+
+\end_inset
+
+ and it is optionally used on an individual contact point level within the
+ :ref:`Gauss-Seidel solver <solfec-theory-gauss-seidel-solver>`.
+\end_layout
+
+\begin_layout Section
+De Saxce and Feng formulation
+\end_layout
+
+\begin_layout Standard
+This is an implicit formulation based on 
+\begin_inset CommandInset citation
+LatexCommand cite
+key "DeSaxceFeng"
+
+\end_inset
+
+ and it is optionally used on an individual contact point level within the
+ :ref:`Gauss-Seidel solver <solfec-theory-gauss-seidel-solver>`.
+\end_layout
+
+\begin_layout Section
+Semismooth Newton formulation
+\end_layout
+
+\begin_layout Standard
+This is an implicit formulation based on 
+\begin_inset CommandInset citation
+LatexCommand cite
+key "Hueber"
+
+\end_inset
+
+ and it is used by default on an individual contact point level within the
+ :ref:`Gauss-Seidel solver <solfec-theory-gauss-seidel-solver>`.
+\end_layout
+
+\begin_layout Section
+Projected Newton formulation
+\end_layout
+
+\begin_layout Standard
+This is an implicit formulation developed specifically for Solfec and combining
+ ideas from 
+\begin_inset CommandInset citation
+LatexCommand cite
+key "DeSaxceFeng"
+
+\end_inset
+
+ and 
+\begin_inset CommandInset citation
+LatexCommand cite
+key "Fukushima,Hayashi"
+
+\end_inset
+
+.
+ It is optionally used on an individual contact point level within the :ref:`Gau
+ss-Seidel solver <solfec-theory-gauss-seidel-solver>`.
+ It is also the basis of contact linearization within the :ref:`projected
+ Newton solver <solfec-theory-projected-newton-solver>`.
+\end_layout
+
+\begin_layout Section
+Semi-explicit penalty formulation
+\end_layout
+
+\begin_layout Standard
+This is a simple penalty based formulation developed specifically for Solfec
+ and used within the :ref:`penalty qsolver <solfec-theory-penalty-solver>`.
+\end_layout
+
+\begin_layout Bibliography
+\begin_inset CommandInset bibitem
+LatexCommand bibitem
+key "AlartCurnier"
+
+\end_inset
+
+￼￼￼￼P.
+ Alart, A.
+ Curnier, A mixed formulation for frictional contact problems prone to Newton
+ like solution methods, Computer Methods in Applied Mechanics and Engineering,
+ 92 (3), 353-375, 1991.
+\end_layout
+
+\begin_layout Bibliography
+\begin_inset CommandInset bibitem
+LatexCommand bibitem
+key "DeSaxceFeng"
+
+\end_inset
+
+G.
+ De Saxcé and Z.
+ Q.
+ Feng, The bipotential method: a constructive approach to design the complete
+ contact law with friction and improved numerical algorithms, Mathematical
+ and Computer Modelling, 28, 225-245, 1998.
+\end_layout
+
+\begin_layout Bibliography
+\begin_inset CommandInset bibitem
+LatexCommand bibitem
+key "Hueber"
+
+\end_inset
+
+S.
+ Hüeber, G.
+ Stadler, and B.
+ I.
+ Wohlmuth, A primal-dual active set algorithm for three-dimensional contact
+ problems with Coulomb friction, SIAM Journal on Scientific Computing, 30
+ (2), 572-596, 2007.
+\end_layout
+
+\begin_layout Bibliography
+\begin_inset CommandInset bibitem
+LatexCommand bibitem
+key "Fukushima"
+
+\end_inset
+
+Masao Fukushima, Zhi-Quan Luo, and Paul Tseng.
+ Smoothing functions for second-order-cone complementarity problems.
+ SIAM Journal on Optimization, 12(2):436–460, 2002.
+ 
+\end_layout
+
+\begin_layout Bibliography
+\begin_inset CommandInset bibitem
+LatexCommand bibitem
+key "Hayashi"
+
+\end_inset
+
+Shunsuke Hayashi, Nobuo Yamashita, and Masao Fukushima, A Combined Smoothing
+ and Regularization Method for Monotone Second-Order Cone Complementarity
+ Problems, SIAM J.
+ Optim., 15(2), 593–615, 2005.
 \end_layout
 
 \end_body
